--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,3 +6,12 @@ layout: default
 <time>{{ page.date | date: "%b %-d, %Y" }}{% if page.author %} • {{ page.author }}{% endif %}{% if page.meta %} • {{ page.meta }}{% endif %}</time>
 
 {{ content }}
+
+
+<h3 id="additional-resources">Additional Resources</h3>
+
+<p><a href="https://exax.org">The Accelerator’s Homepage (exax.org)</a><br />
+  <a href="https://github.com/ebay/accelerator">The Accelerator on Github/eBay</a><br />
+  <a href="https://berkeman.github.io/pdf/acc_install.pdf">Installation Manual with Performance Test</a><br />
+  <a href="https://berkeman.github.io/pdf/acc_manual.pdf">Reference Manual</a></p>
+
